[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "password-hash-tool"
version = "0.1.0"
description = "CLI tool to hash, verify, and benchmark passwords using modern algorithms (bcrypt, argon2, scrypt). Includes an optional FastAPI server for REST-based integration."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "valorisa" },
]
keywords = ["password", "hash", "bcrypt", "argon2", "scrypt", "security", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "typer>=0.9.0",
    "bcrypt>=4.0.0",
    "argon2-cffi>=23.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "ruff>=0.4.0",
]

[project.scripts]
password-hash-tool = "password_hash_tool.cli:app"

[project.urls]
Homepage = "https://github.com/valorisa/Password-Hash-Tool"
Repository = "https://github.com/valorisa/Password-Hash-Tool"
Issues = "https://github.com/valorisa/Password-Hash-Tool/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
